--- a/Backend_codebase/vercel.json
+++ b/Backend_codebase/vercel.json
@@ -11,5 +11,16 @@
             "src": "/(.*)",
             "dest": "/"
         }
+    ],
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                {
+                    "key": "Content-Security-Policy",
+                    "value": "default-src 'self'; font-src 'self' https://opportunity-orbit-job-portal.vercel.app; style-src 'self' 'unsafe-inline';"
+                }
+            ]
+        }
     ]
 }
