--- a/Backend_codebase/vercel.json
+++ b/Backend_codebase/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "*.js",
+            "src": "./index.js",
             "use": "@vercel/node"
         }
     ],
@@ -10,17 +10,6 @@
         {
             "src": "/(.*)",
             "dest": "/"
-        }
-    ],
-    "headers": [
-        {
-            "source": "/(.*)",
-            "headers": [
-                {
-                    "key": "Content-Security-Policy",
-                    "value": "default-src 'self'; font-src 'self' https://opportunity-orbit-job-portal.vercel.app; style-src 'self' 'unsafe-inline';"
-                }
-            ]
         }
     ]
 }
